Update color options in FEATURE_DB

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
         // Database of Features
         const FEATURE_DB = {
             shapes: ["長條狀的", "圓圓的", "方形的", "不規則形狀", "彎曲的"],
-            colors: ["紅色的", "金色的", "透明的", "黑色的", "銀色的", "霧面的"],
+            colors: ["紅色的", "金色的", "透明的", "深色的", "淺色的", "霧面的"],
             functions: ["可以吃的", "可以喝的", "手持式的", "可穿戴的", "可玩耍的"],
             states: ["香香的", "冰冷的", "會發光的", "會發出聲音的", "毛茸茸的"]
         };
