Update API_URL to the correct Google Script URL

--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
     <script>
         // ============================================
         // ⚠️ 請填寫正確的 GAS URL (不需要重新部署 GAS，只要換前端即可)
-        const API_URL = 'YOUR_GOOGLE_SCRIPT_URL_HERE'; 
+        const API_URL = 'https://script.google.com/macros/s/AKfycbzq9VELc16iIDjvOvOPkcrvvBI6Wvz53KrnHIZJL5F-ivV6cvSP-C_PH8umKnaGcNBB5A/exec'; 
         // ============================================
 
         const ANIMAL_NAMES = {
