Update title and description for 2025 event

--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>🎄 聖誕動物匿名交換禮物 Final+</title>
+    <!-- 修改標題 -->
+    <title>🎄 2025聖誕神秘交換禮物</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@400;700&display=swap" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.6.0/dist/confetti.browser.min.js"></script>
@@ -26,7 +27,8 @@
     <button onclick="logout()" class="absolute top-4 left-4 text-xs text-slate-500 hover:text-white border border-slate-600 px-2 py-1 rounded z-50">🔒 重置身分</button>
 
     <header class="text-center py-8 px-4 mt-4">
-        <h1 class="text-4xl font-bold text-red-500 drop-shadow-md mb-2">🎅 聖誕動物禮物交換</h1>
+        <!-- 修改主標題 -->
+        <h1 class="text-4xl font-bold text-red-500 drop-shadow-md mb-2">🎅 2025聖誕神秘交換禮物</h1>
         <p class="text-slate-400 text-sm">湊滿 5 人 · 抽出特徵 · 公開配對</p>
     </header>
 
@@ -57,7 +59,9 @@
                 身分：<span class="userBadgeText"></span>
             </div>
             <h2 class="text-xl font-bold mb-2 text-center text-blue-800 mt-4">📛 填寫真實姓名</h2>
-            <p class="text-sm text-gray-500 text-center mb-4">讓抽到你的人知道是誰！<br>(地址請另外公佈在群組)</p>
+            <!-- 修改說明文字 (移除了地址相關提示) -->
+            <p class="text-sm text-gray-500 text-center mb-4">讓抽到你的人知道是誰！</p>
+            
             <div class="space-y-3">
                 <input type="text" id="inputName" placeholder="請輸入你的真實姓名" class="w-full p-4 border-2 border-blue-200 rounded-xl text-lg text-center font-bold">
                 <button onclick="submitProfile()" class="w-full bg-blue-600 hover:bg-blue-700 text-white font-bold py-3 rounded-lg text-lg">確認儲存 & 下一步</button>
