Update API_URL to the new Google Script URL

--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 
     <script>
         // ⚠️ 請填入你的 GAS 網址 (維持你原本的)
-        const API_URL = 'YOUR_GOOGLE_SCRIPT_URL_HERE'; 
+        const API_URL = 'https://script.google.com/macros/s/AKfycbzq9VELc16iIDjvOvOPkcrvvBI6Wvz53KrnHIZJL5F-ivV6cvSP-C_PH8umKnaGcNBB5A/exec'; 
 
         const ANIMAL_NAMES = { 'Penguin': '企鵝 🐧', 'Alpaca': '羊駝 🦙', 'Sloth': '樹懶 🦥', 'Owl': '貓頭鷹 🦉', 'Sea Otter': '海獺 🦦' };
         
