Fix formatting of shapes array in FEATURE_DB

--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
         const ANIMAL_NAMES = { 'Penguin': '企鵝 🐧', 'Alpaca': '羊駝 🦙', 'Sloth': '樹懶 🦥', 'Owl': '貓頭鷹 🦉', 'Sea Otter': '海獺 🦦' };
         
         const FEATURE_DB = {
-            shapes: ["長條狀的", "圓圓的", "方形的", "彎曲的", "三角形的", "星星圖案的", "動物造型的", "扁平的", "澎澎的", "巨大的", "迷你的", "愛心圖案的"],
+            shapes: ["長條狀的", "圓圓的", "方形的", "三角形的", "星星圖案的", "動物造型的", "扁平的", "澎澎的", "巨大的", "迷你的", "愛心圖案的"],
             colors: ["紅色的", "透明的", "黑色的", "綠色的", "淺色的", "木頭色的", "粉嫩色系的",  "純白色的", "五顏六色的"],
             functions: ["可以吃的", "可以喝的", "手持式的", "可穿戴的", "可玩耍的", "會動的", "可以充電的", "舒壓的", "可以用來裝飾的", "與音樂有關的", "讓生活變方便的", "辦公室可用的", "可以放床上的", "接觸肌膚的", "與食物有關的", "具收納功能的", "具清潔功能的", "與交通有關的", "與睡眠有關的", "感覺很養生的", "跟3C有關的"],
             states: ["香香的", "冰冷的", "亮亮的", "會發出聲音的", "毛茸茸的", "鹹鹹的", "甜甜的", "辣辣的", "熱熱的", "防水的", "磁吸的", "軟軟的", "硬邦邦的", "很有重量的", "易碎的", "簡約風格的", "在家會用到的", "液體狀的", "可愛的", "像阿mu一樣胖胖的"]
